Добавил поддержку пользователей и исправил ошибки в обработчиках
